# Programming-Game-AI-by-Example-src

./: .gitignore
Buckland_Chapter2-State Machines/WestWorld1/: BaseGameEntity.h  CMakeLists.txt  Locations.h  main.cpp
Buckland_Chapter2-State Machines/WestWorldWithMessaging/: CMakeLists.txt  MessageDispatcher.cpp  MessageDispatcher.h  Miner.h  MinerOwnedStates.cpp  MinerOwnedStates.h  MinersWife.h  MinersWifeOwnedStates.cpp  MinersWifeOwnedStates.h  main.cpp
Buckland_Chapter2-State Machines/WestWorldWithMessaging/Common/2D/: CMakeLists.txt  geometry.h
Buckland_Chapter2-State Machines/WestWorldWithMessaging/Common/Messaging/: MessageDispatcher.h  Telegram.h
Buckland_Chapter2-State Machines/WestWorldWithMessaging/Common/misc/: CMakeLists.txt  iniFileLoaderBase.cpp
Buckland_Chapter2-State Machines/WestWorldWithWoman/: CMakeLists.txt  Miner.h  StateMachine.h  main.cpp
Buckland_Chapter2-State Machines/WestWorldWithWoman/misc/: utils.h
Buckland_Chapter3-Steering Behaviors/: .gitignore  BaseGameEntity.h  CMakeLists.txt  GameWorld.cpp  GameWorld.h  MovingEntity.h  Obstacle.h  ParamLoader.cpp  ParamLoader.h  Path.cpp  Path.h  Readme.md  SteeringBehaviors.cpp  SteeringBehaviors.h  Vehicle.cpp  Vehicle.h  main.cpp  params.ini
Buckland_Chapter3-Steering Behaviors/Common/2D/: Vector2D.h
Buckland_Chapter3-Steering Behaviors/Common/Game/: BaseGameEntity.cpp  BaseGameEntity.h  EntityFunctionTemplates.h  MovingEntity.h
Buckland_Chapter3-Steering Behaviors/Common/Messaging/: MessageDispatcher.cpp  Telegram.h
Buckland_Chapter3-Steering Behaviors/Common/Misc/: CMakeLists.txt  CellSpacePartition.h  Cgdi.h  Smoother.h  WindowUtils.cpp  iniFileLoaderBase.h  utils.h
Buckland_Chapter3-Steering Behaviors/Common/Time/: CrudeTimer.cpp  CrudeTimer.h  PrecisionTimer.h
Buckland_Chapter4-SimpleSoccer/: CMakeLists.txt  FieldPlayer.cpp  FieldPlayer.h  FieldPlayerStates.cpp  FieldPlayerStates.h  Goal.h  GoalKeeperStates.cpp  GoalKeeperStates.h  Goalkeeper.cpp  Goalkeeper.h  ParamLoader.cpp  ParamLoader.h  PlayerBase.cpp  PlayerBase.h  SoccerBall.cpp  SoccerBall.h  SoccerPitch.cpp  SoccerPitch.h  SoccerTeam.cpp  SoccerTeam.h  SteeringBehaviors.cpp  SteeringBehaviors.h  SupportSpotCalculator.cpp  SupportSpotCalculator.h  TeamStates.cpp  TeamStates.h  main.cpp  resource.h
Buckland_Chapter4-SimpleSoccer/Common/2D/: Transformations.h  Wall2D.h  geometry.h
Buckland_Chapter4-SimpleSoccer/Common/Debug/: CMakeLists.txt  DebugConsole.cpp  DebugConsole.h
Buckland_Chapter4-SimpleSoccer/Common/FSM/: StateMachine.h
Buckland_Chapter4-SimpleSoccer/Common/Game/: BaseGameEntity.h  EntityManager.h  MovingEntity.h  Region.h
Buckland_Chapter4-SimpleSoccer/Common/Messaging/: MessageDispatcher.cpp  MessageDispatcher.h  Telegram.h
Buckland_Chapter4-SimpleSoccer/Common/Misc/: Smoother.h  Stream_Utility_Functions.h  WindowUtils.cpp  WindowUtils.h
Buckland_Chapter4-SimpleSoccer/Common/Time/: CMakeLists.txt  PrecisionTimer.cpp  Regulator.h
Common/2D/: C2DMatrix.h  Transformations.h  Vector2D.h  geometry.h
Common/Game/: BaseGameEntity.h  CMakeLists.txt
Common/Messaging/: CMakeLists.txt  MessageDispatcher.cpp  MessageDispatcher.h  Telegram.h
Common/Time/: CrudeTimer.cpp  CrudeTimer.h
Common/misc/: CellSpacePartition.h  Cgdi.h  Stream_Utility_Functions.h  iniFileLoaderBase.cpp  utils.h
